# auto-agent-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  TUTORIAL_CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
articles/: juejin-01-auto-agent-kit-intro.md  medium-01-building-production-grade-agents.md  reddit-01-langchain-vs-auto-agent-kit.md  zhihu-01-langchain-vs-auto-agent-kit.md
auto_agent_kit/: __init__.py
auto_agent_kit/core/: __init__.py  access_control.py  async_plan.py  context_compressor.py  crew_role.py  dashboard.py  error_reflection.py  mcp_server.py  plan_mode.py  plugin.py  state_graph.py  task_lock.py  tool_router.py  typed_agent.py
auto_agent_kit/examples/: demo.py
scripts/: gen_guide_pdf.py  publish.py
tests/: conftest.py  test_all.py  test_crew_role.py  test_mcp_resources.py  test_typed_agent.py  test_v030.py
