[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-agent-kit"
version = "0.4.1"
description = "A practical Python toolkit for building production-grade AI agents with Plan-Execute, Error Reflection, Tool Routing, Dashboard, Access Control, MCP Server, StateGraph, CrewRole, and TypedAgent."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai-agent", "llm", "toolkit", "agent-framework", "mcp"]

authors = [
    {name = "AoLongZhiZun", email = "2480528492@qq.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mcp = ["fastapi>=0.109.0", "uvicorn>=0.27.0", "sse-starlette>=1.8.0"]
dashboard = ["fastapi>=0.109.0", "uvicorn>=0.27.0", "jinja2>=3.1.0"]
all = ["auto-agent-kit[mcp,dashboard]"]

[project.urls]
Homepage = "https://github.com/Lwh909193/auto-agent-kit"
Repository = "https://github.com/Lwh909193/auto-agent-kit"

[tool.setuptools.packages.find]
include = ["auto_agent_kit*"]
